[package]
name = "property-pilot-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
rand = "0.9.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.140"
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
surrealdb = "2.3.3"
thiserror = "2.0.12"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
